plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.openjfx.javafxplugin' version "0.1.0"
}

group 'HotaruFX'
version '1.1.0'
mainClassName = 'com.annimon.hotarufx.Main'

sourceCompatibility = 17

repositories {
    mavenCentral()
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml', "javafx.swing"]
}

dependencies {
    implementation 'org.fxmisc.richtext:richtextfx:0.11.3'

    testImplementation platform('org.junit:junit-bom:5.11.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation "org.junit.jupiter:junit-jupiter-api"
    testImplementation "org.junit.jupiter:junit-jupiter-params"
    testImplementation 'org.hamcrest:hamcrest-library:2.2'
}

test {
    useJUnitPlatform()
}
